--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -23,6 +23,8 @@ frameworkVersion: '2'
 provider:
   name: aws
   runtime: nodejs12.x
+  region: eu-central-1
+  timeout: 60 # optional, in seconds, default is 6
   lambdaHashingVersion: 20201221
 
 # you can overwrite defaults here
