added function and environment

--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -25,6 +25,11 @@ provider:
   runtime: nodejs12.x
   region: eu-central-1
   timeout: 60 # optional, in seconds, default is 6
+  environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    PROJECT_ID: ${file(config.json):PROJECT_ID}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
   lambdaHashingVersion: 20201221
 
 # you can overwrite defaults here
@@ -60,8 +65,12 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  getAuthURL:
+    handler: handler.get.AuthURL
+    events:
+        - http:
+          path: api/get-auth-url
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
