--- a/auth-server/config.json
+++ b/auth-server/config.json
@@ -1,6 +1,6 @@
 {
     "CLIENT_ID": "486067875551-mfrvv5s788hiupsllr4khe9bsn8n3clm.apps.googleusercontent.com",
-    "PROJECT_ID":"",
+    "PROJECT_ID":"meet-app-327914",
     "CLIENT_SECRET": "c4_ZC3506l5InWcpJdNAawor",
     "CALENDAR_ID": "fullstackwebdev@careerfoundry.com"
 }
