--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "jest-cucumber": "^3.0.1"
   }
 }
