--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://harrisb8.github.io/meet/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
